welcome.lessons.welcome.bat.bool2.InOrder.scala.code
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {
	if(b > a && c > b) {
		return true	
	}
	else if(bOk && c > b) {
		return true
	}
	else retur false
}
